# AlgoritmosBusqueda

./: BusqAEstrella.py  BusqAmplitud.py  BusqAvara.py  BusqCostoUniforme.py  BusqLimProf.py  BusqProfIterativa.py  BusqProfundidad.py  coordenadas.txt  coordenadas_bifurcado.txt  dibujar_grafo.py  grafo.txt  grafo2.txt  grafo_bifurcado.txt  grafo_pesado.txt  grafo_rumania.txt  graph.txt  interfaz.py  pyproject.toml
Final/: avara.py
busquedas/: avara.py  grafo.txt
